# reap

./: Cargo.toml  README.md  TODO.md
crates/reap-backtest/: Cargo.toml
crates/reap-backtest/src/: calibration.rs  execution.rs  lib.rs  matching.rs  portfolio.rs  replay.rs  research.rs  research_verification.rs
crates/reap-capture/: Cargo.toml
crates/reap-capture-framing/: Cargo.toml
crates/reap-capture-framing/src/: bounded_writer.rs  frame.rs  hash.rs  lib.rs  verify.rs
crates/reap-capture-framing/tests/: dependency_policy.rs  framing_contract.rs  writer_contract.rs
crates/reap-capture/src/: analysis.rs  cleanliness.rs  configuration.rs  error.rs  hashing.rs  lib.rs  report.rs  runtime.rs  verification.rs  writer.rs
crates/reap-cli/: Cargo.toml
crates/reap-cli/src/: deployment.rs  latency.rs  main.rs  production_approval.rs  production_evidence.rs  statement.rs
crates/reap-cli/tests/: capture_failure_reports.rs  live_failure_reports.rs
crates/reap-emergency-core/: Cargo.toml
crates/reap-emergency-core/src/: lib.rs  verification.rs
crates/reap-emergency-runner/: Cargo.toml
crates/reap-emergency-runner/src/: lib.rs  main.rs
crates/reap-fault/: Cargo.toml
crates/reap-fault/src/: config.rs  control.rs  lib.rs  protocol.rs  proxy.rs  state.rs  verification.rs
crates/reap-feed/: Cargo.toml
crates/reap-feed/src/: connection.rs  dedup.rs  lib.rs  pipeline.rs  raw.rs  replay.rs  sequence.rs  subscription.rs  supervisor.rs
crates/reap-feed/tests/: compile_fail_boundaries.rs  transport_compatibility.rs
crates/reap-live/: Cargo.toml
crates/reap-live-contracts/: Cargo.toml
crates/reap-live-contracts/src/: account_certification.rs  config.rs  connectivity_plan.rs  lib.rs  mode.rs
crates/reap-live/benches/: action_path.rs  live_loop.rs
crates/reap-live/src/: account_certification.rs  bill_collection.rs  bootstrap.rs  config.rs  connectivity_plan.rs  convergence.rs  coordinator.rs  deadman_certification.rs  economic_statement.rs  emergency.rs  emergency_verification.rs  fault_campaign.rs  fill_collection.rs  forbidden_orders.rs  host.rs  latency.rs  lib.rs  live_verification.rs  operator.rs  order_ws.rs  production_transition.rs  provenance.rs  regular_execution.rs  runtime.rs  runtime_config.rs  safety_contracts.rs  startup.rs  statement.rs
crates/reap-live/tests/: compile_fail_boundaries.rs  dependency_policy.rs  runtime_config_compatibility.rs
crates/reap-okx-emergency-adapter/: Cargo.toml
crates/reap-okx-emergency-adapter/src/: lib.rs
crates/reap-okx-live-adapter/: Cargo.toml
crates/reap-okx-live-adapter/src/: lib.rs  order_ws.rs
crates/reap-okx-live-adapter/tests/: compile_fail_boundaries.rs
crates/reap-okx-wire/: Cargo.toml
crates/reap-okx-wire/src/: lib.rs
crates/reap-order/: Cargo.toml
crates/reap-order/src/: authority.rs  client_id.rs  gateway.rs  lib.rs  pacing.rs  private.rs  reconcile.rs  transport.rs
crates/reap-order/tests/: compile_fail_boundaries.rs
crates/reap-pm-live/: Cargo.toml
crates/reap-pm-live/benches/: pm_action_path.rs
crates/reap-pm-live/src/: capture.rs  capture_roles.rs  composition.rs  coordinator.rs  evidence.rs  fake_effect.rs  journal.rs  lanes.rs  lib.rs  private_monitor.rs  public_routes.rs  replay.rs  schedule.rs
crates/reap-pm-live/tests/: active_reducer_contract.rs  combined_replay.rs  compile_fail_boundaries.rs  composition_contract.rs  dependency_policy.rs  lane_contract.rs  phase3_active_lane_enactment_contract.rs  phase3_fixture_reducer_contract.rs  phase3_reducer_ownership_contract.rs  phase3_socket_terminal_evidence.rs  phase3_terminal_contract.rs  phase4_private_monitor_contract.rs  phase6_evidence_policy.rs  pm_schedule_contract.rs  public_route_contract.rs
crates/reap-polymarket-adapter/: Cargo.toml
crates/reap-polymarket-adapter/src/: account_fixture.rs  fake_execution.rs  fixture_delivery.rs  fixture_scope.rs  lib.rs  private_fixture.rs  public.rs  public_metadata.rs  public_session.rs  reconcile_fixture.rs
crates/reap-polymarket-adapter/tests/: account_fixture_contract.rs  compile_fail_boundaries.rs  fake_execution_contract.rs  private_normalization_contract.rs  private_source_policy.rs  public_session_contract.rs  reconciliation_fixture_contract.rs  role_contracts.rs
crates/reap-polymarket-wire/: Cargo.toml
crates/reap-polymarket-wire/fixtures/: fixture_manifest.json  ignored_last_trade_unparsed_fields.json  market_book_predarb_seed.json  market_subscription.json  official_snapshot_hash_vector.json  phase3_clob_grid_drift.json  phase3_clob_minimum_drift.json  phase3_clob_negative_risk_drift.json  phase3_clob_wrong_membership.json  phase3_crossed_snapshot.json  phase3_domain_authority_injection.json  phase3_empty_snapshot.json  phase3_initial_snapshot.json  phase3_lifecycle_archived.json  phase3_lifecycle_book_disabled.json  phase3_lifecycle_closed.json  phase3_lifecycle_inactive.json  phase3_lifecycle_not_accepting.json  phase3_lifecycle_unknown_field.json  phase3_logical_sequence_cases.json  phase3_price_above_one_snapshot.json  phase3_price_negative_snapshot.json  phase3_price_one_snapshot.json  phase3_price_zero_snapshot.json  phase3_spender_authority_injection.json  phase3_token_unknown_field.json  phase3_valid_bbo.json  phase3_valid_incremental.json  phase3_wrong_token_incremental.json  predarb_balance_allowance_seed.json  predarb_open_order_seed.json  predarb_user_order_seed.json  predarb_user_trade_seed.json  provenance.json  valid_clob_market.json  valid_lifecycle.json
crates/reap-polymarket-wire/src/: error.rs  exact.rs  hash.rs  lib.rs  limits.rs  private_fixture.rs  raw.rs  rest.rs  scope.rs  subscription.rs  unsigned_order.rs  ws.rs
crates/reap-polymarket-wire/tests/: compile_fail_boundaries.rs  dependency_policy.rs  fixture_provenance.rs  hash_contract.rs  phase3_fixture_contract.rs  private_fixture_contract.rs  rest_contract.rs  subscription_contract.rs  unsigned_order_contract.rs  ws_contract.rs
crates/reap-telemetry/: Cargo.toml
crates/reap-telemetry/src/: alerts.rs  host.rs  lib.rs  provenance.rs
crates/reap-venue/: Cargo.toml
(+628 files in other folders)
