[workspace]
members = [
    "crates/reap-core",
    "crates/reap-book",
    "crates/reap-order",
    "crates/reap-strategy",
    "crates/reap-backtest",
    "crates/reap-cli",
]
default-members = ["crates/reap-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
reap-backtest = { path = "crates/reap-backtest" }
reap-book = { path = "crates/reap-book" }
reap-core = { path = "crates/reap-core" }
reap-order = { path = "crates/reap-order" }
reap-strategy = { path = "crates/reap-strategy" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
