[workspace]
members = [
    "crates/reap-core",
    "crates/reap-transport",
    "crates/reap-capture-framing",
    "crates/reap-benchmark-allocator",
    "crates/reap-durable-writer",
    "crates/reap-pm-core",
    "crates/reap-pm-state",
    "crates/reap-polymarket-wire",
    "crates/reap-pm-strategy",
    "crates/reap-polymarket-adapter",
    "crates/reap-pm-live-contracts",
    "crates/reap-pm-live",
    "crates/reap-okx-public-source",
    "crates/reap-venue",
    "crates/reap-feed",
    "crates/reap-fault",
    "crates/reap-book",
    "crates/reap-order",
    "crates/reap-okx-wire",
    "crates/reap-okx-live-adapter",
    "crates/reap-emergency-core",
    "crates/reap-emergency-runner",
    "crates/reap-evidence-core",
    "crates/reap-okx-evidence-adapter",
    "crates/reap-okx-emergency-adapter",
    "crates/reap-risk",
    "crates/reap-strategy",
    "crates/reap-engine",
    "crates/reap-backtest",
    "crates/reap-capture",
    "crates/reap-storage",
    "crates/reap-telemetry",
    "crates/reap-live-contracts",
    "crates/reap-live",
    "crates/reap-cli",
]
default-members = ["crates/reap-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
csv = "1"
futures-util = "0.3"
hmac = "0.12"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
libc = "0.2"
reap-benchmark-allocator = { path = "crates/reap-benchmark-allocator" }
reap-backtest = { path = "crates/reap-backtest" }
reap-book = { path = "crates/reap-book" }
reap-capture = { path = "crates/reap-capture" }
reap-capture-framing = { path = "crates/reap-capture-framing" }
reap-core = { path = "crates/reap-core" }
reap-durable-writer = { path = "crates/reap-durable-writer" }
reap-feed = { path = "crates/reap-feed" }
reap-fault = { path = "crates/reap-fault" }
reap-emergency-core = { path = "crates/reap-emergency-core" }
reap-emergency-runner = { path = "crates/reap-emergency-runner" }
reap-live = { path = "crates/reap-live" }
reap-live-contracts = { path = "crates/reap-live-contracts" }
reap-engine = { path = "crates/reap-engine" }
reap-order = { path = "crates/reap-order" }
reap-pm-core = { path = "crates/reap-pm-core" }
reap-pm-state = { path = "crates/reap-pm-state" }
reap-polymarket-wire = { path = "crates/reap-polymarket-wire" }
reap-pm-live = { path = "crates/reap-pm-live" }
reap-pm-live-contracts = { path = "crates/reap-pm-live-contracts" }
reap-pm-strategy = { path = "crates/reap-pm-strategy" }
reap-polymarket-adapter = { path = "crates/reap-polymarket-adapter" }
reap-okx-public-source = { path = "crates/reap-okx-public-source" }
reap-okx-wire = { path = "crates/reap-okx-wire" }
reap-okx-live-adapter = { path = "crates/reap-okx-live-adapter" }
reap-evidence-core = { path = "crates/reap-evidence-core" }
reap-okx-evidence-adapter = { path = "crates/reap-okx-evidence-adapter" }
reap-okx-emergency-adapter = { path = "crates/reap-okx-emergency-adapter" }
reap-risk = { path = "crates/reap-risk" }
reap-storage = { path = "crates/reap-storage" }
reap-strategy = { path = "crates/reap-strategy" }
reap-telemetry = { path = "crates/reap-telemetry" }
reap-transport = { path = "crates/reap-transport" }
reap-venue = { path = "crates/reap-venue" }
serde = { version = "1", features = ["derive"] }
serde_ignored = "0.1.14"
serde_json = { version = "1", features = ["float_roundtrip"] }
sha1 = "0.10"
sha2 = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ring = "0.17"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
trybuild = "1"
url = "2"
zeroize = "1"

[profile.dev]
debug = 0
incremental = false

[profile.test]
debug = 0
incremental = false
