[package]
name = "reap-backtest"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
csv.workspace = true
reap-book.workspace = true
reap-core.workspace = true
reap-feed.workspace = true
reap-order.workspace = true
reap-strategy.workspace = true
reap-venue.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
