[package]
name = "reap-capture-framing"
version.workspace = true
edition.workspace = true

[features]
legacy-reap-capture = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
