[package]
name = "reap-capture"
version.workspace = true
edition.workspace = true

[dependencies]
reap-book.workspace = true
reap-core.workspace = true
reap-feed.workspace = true
reap-venue.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tempfile = "3"
