[package]
name = "reap-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "reap"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
reap-backtest.workspace = true
reap-capture.workspace = true
reap-feed.workspace = true
reap-live.workspace = true
reap-strategy.workspace = true
reap-telemetry.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
