[package]
name = "reap-emergency-core"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
reap-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
url.workspace = true

[dev-dependencies]
tempfile = "3"
