[package]
name = "reap-fault"
version.workspace = true
edition.workspace = true

[dependencies]
bytes.workspace = true
futures-util.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
reap-core.workspace = true
reap-feed.workspace = true
reap-live.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
url.workspace = true

[dev-dependencies]
tempfile = "3"
