[package]
name = "reap-feed"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
reap-book.workspace = true
reap-core.workspace = true
reap-venue.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
