[package]
name = "reap-live-contracts"
version.workspace = true
edition.workspace = true

[dependencies]
reap-core.workspace = true
reap-risk.workspace = true
reap-strategy.workspace = true
reap-venue.workspace = true
serde.workspace = true
serde_ignored.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
url.workspace = true
