[package]
name = "reap-live"
version.workspace = true
edition.workspace = true

[[bench]]
name = "live_loop"
harness = false

[dependencies]
reap-core.workspace = true
reap-engine.workspace = true
reap-feed.workspace = true
reap-order.workspace = true
reap-risk.workspace = true
reap-storage.workspace = true
reap-strategy.workspace = true
reap-telemetry.workspace = true
reap-venue.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true
