[package]
name = "reap-okx-emergency-adapter"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
reap-emergency-core.workspace = true
reap-okx-wire.workspace = true
reap-venue.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
tokio.workspace = true
