[package]
name = "reap-order"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
reap-core.workspace = true
reap-venue.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true
