[package]
name = "reap-pm-live"
version.workspace = true
edition.workspace = true

[dependencies]
base64.workspace = true
reap-capture-framing.workspace = true
reap-okx-public-source.workspace = true
reap-pm-core.workspace = true
reap-pm-live-contracts.workspace = true
reap-pm-state.workspace = true
reap-pm-strategy.workspace = true
reap-polymarket-adapter.workspace = true
reap-transport.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
futures-util.workspace = true
serde_json.workspace = true
tempfile = "3"
tokio-tungstenite.workspace = true
trybuild.workspace = true
