[package]
name = "reap-polymarket-adapter"
version.workspace = true
edition.workspace = true

[dependencies]
reap-pm-core.workspace = true
reap-polymarket-wire.workspace = true
reap-transport.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
trybuild.workspace = true
