[package]
name = "reap-polymarket-wire"
version.workspace = true
edition.workspace = true

[dependencies]
reap-pm-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
thiserror.workspace = true

[dev-dependencies]
sha2.workspace = true
trybuild.workspace = true
