[package]
name = "reap-telemetry"
version.workspace = true
edition.workspace = true

[dependencies]
libc.workspace = true
reqwest.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
