[package]
name = "reap-venue"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
hmac.workspace = true
reap-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
tokio.workspace = true
